syntax = "proto3";

package pb;

import "user.proto";

option go_package = "kara-bank/pb";

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message RegisterUserResponse {
  User user = 1;
}