syntax = "proto3";

package pb;

import "rpc_register_user.proto";
import "rpc_login_user.proto";

option go_package = "kara-bank/pb";

service KaraBank {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {}
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
}