syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "kara-bank/pb";

message User {
  string email = 1;
  string first_name = 3;
  string last_name = 4;
  google.protobuf.Timestamp created_at = 5;
  string user_role = 6;
}